# pupil-ai

./: .env  .envexample  .gitignore  .reg  README.md  apiService.js  chatbox-input-renderer.js  chatbox-input.html  chatbox-response-renderer.js  chatbox-response.html  context_script.py  main.js  package.json  pet.html  preload.js  pyproject.toml  requirements.txt  run.py  server.js  server.py  setup.py  styles.css
gemini/: llm.py  prompts.py
model/: pet.js
public/: index.html
search/: searcher.py  serper.py
src/: App.css  App.js  Task.js  index.js
