[tool.poetry]
name = "co-pet"
version = "0.1.0"
description = ""
authors = ["Luis Frentzen <l.frentzen@collabocode.com>"]
readme = "README.md"
packages = [{include = "co_pet"}]

[tool.poetry.dependencies]
python = "^3.9"
pyautogui = "^0.9.54"
pillow = "^10.3.0"
google-generativeai = "^0.5.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
regex = "^2024.4.28"
tavily-python = "^0.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
